--- a/nlp_models/GetWordIds.ipynb
+++ b/nlp_models/GetWordIds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -156,34 +156,35 @@
     {
      "data": {
       "text/plain": [
-       "[(11, 'The'),\n",
-       " (3, 'three'),\n",
-       " (1, 'One'),\n",
-       " (14, 'lazy'),\n",
-       " (2, 'four'),\n",
-       " (13, 'over'),\n",
-       " (10, 'jumps'),\n",
-       " (16, 'a'),\n",
-       " (4, 'six'),\n",
-       " (8, 'five'),\n",
-       " (24, 'doing'),\n",
-       " (15, 'quick'),\n",
-       " (12, 'brown'),\n",
+       "[(24, 'doing'),\n",
+       " (5, 'seven'),\n",
+       " (22, 'How'),\n",
+       " (11, 'brown'),\n",
+       " (6, 'six'),\n",
+       " (9, 'eight'),\n",
+       " (15, 'fox'),\n",
+       " (18, 'lazy'),\n",
+       " (21, 'are'),\n",
+       " (8, 'four'),\n",
+       " (23, 'you'),\n",
        " (0, 'two'),\n",
-       " (23, 'What'),\n",
-       " (5, 'ten'),\n",
-       " (18, 'fox'),\n",
-       " (6, 'eight'),\n",
-       " (22, 'are'),\n",
-       " (21, 'How'),\n",
-       " (7, '.'),\n",
-       " (19, '?'),\n",
-       " (20, 'you'),\n",
-       " (17, 'dog'),\n",
-       " (9, 'seven')]"
+       " (1, 'ten'),\n",
+       " (3, 'five'),\n",
+       " (20, '?'),\n",
+       " (7, 'nine'),\n",
+       " (14, 'dog'),\n",
+       " (25, 'What'),\n",
+       " (4, 'three'),\n",
+       " (10, '.'),\n",
+       " (2, 'One'),\n",
+       " (12, 'The'),\n",
+       " (19, 'a'),\n",
+       " (16, 'over'),\n",
+       " (13, 'quick'),\n",
+       " (17, 'jumps')]"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of words in corpora: 25\n"
+      "Number of words in corpora: 26\n"
      ]
     }
    ],
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +257,7 @@
        "'two'"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
