--- a/nlp_models/train_nn_3_in_1_lstm_1_out.ipynb
+++ b/nlp_models/train_nn_3_in_1_lstm_1_out.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -11,12 +11,7 @@
     "import gensim\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, LSTM, Embedding\n",
-    "from keras.utils import np_utils\n",
-    "from IPython.display import SVG\n",
-    "from keras.utils.visualize_util import plot,model_to_dot\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.callbacks import ModelCheckpoint\n",
-    "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -30,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 148,
    "metadata": {
     "collapsed": true
    },
@@ -45,12 +40,16 @@
     "OUT_SEQ_LENGTH = 1\n",
     "EMBEDDING_DIM = 64\n",
     "HIDDEN_LAYER_1 = 1024\n",
-    "MODEL_NAME = 'nn_3_in_1_lstm_1_out'"
+    "MODEL_NAME = 'nn_3_in_1_lstm_1_out'\n",
+    "\n",
+    "N_SAMPLES = 10000000\n",
+    "N_EPOCH = 4\n",
+    "N_BATCH = 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -135,11 +134,11 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "embedding_3 (Embedding)          (None, 3, 64)         896         embedding_input_3[0][0]          \n",
+      "embedding_9 (Embedding)          (None, 3, 64)         896         embedding_input_9[0][0]          \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_4 (LSTM)                    (None, 1024)          4460544     embedding_3[0][0]                \n",
+      "lstm_9 (LSTM)                    (None, 1024)          4460544     embedding_9[0][0]                \n",
       "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 14)            14350       lstm_4[0][0]                     \n",
+      "dense_9 (Dense)                  (None, 14)            14350       lstm_9[0][0]                     \n",
       "====================================================================================================\n",
       "Total params: 4475790\n",
       "____________________________________________________________________________________________________\n"
@@ -152,72 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"264pt\" viewBox=\"0.00 0.00 206.00 264.00\" width=\"206pt\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g class=\"graph\" id=\"graph0\" transform=\"scale(1 1) rotate(0) translate(4 260)\">\n",
-       "<title>G</title>\n",
-       "<polygon fill=\"white\" points=\"-4,4 -4,-260 202,-260 202,4 -4,4\" stroke=\"none\"/>\n",
-       "<!-- 140558092108688 -->\n",
-       "<g class=\"node\" id=\"node1\"><title>140558092108688</title>\n",
-       "<polygon fill=\"none\" points=\"0,-219.5 0,-255.5 198,-255.5 198,-219.5 0,-219.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-233.8\">embedding_input_3 (InputLayer)</text>\n",
-       "</g>\n",
-       "<!-- 140558092108016 -->\n",
-       "<g class=\"node\" id=\"node2\"><title>140558092108016</title>\n",
-       "<polygon fill=\"none\" points=\"15.5,-146.5 15.5,-182.5 182.5,-182.5 182.5,-146.5 15.5,-146.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-160.8\">embedding_3 (Embedding)</text>\n",
-       "</g>\n",
-       "<!-- 140558092108688&#45;&gt;140558092108016 -->\n",
-       "<g class=\"edge\" id=\"edge1\"><title>140558092108688-&gt;140558092108016</title>\n",
-       "<path d=\"M99,-219.313C99,-211.289 99,-201.547 99,-192.569\" fill=\"none\" stroke=\"black\"/>\n",
-       "<polygon fill=\"black\" points=\"102.5,-192.529 99,-182.529 95.5001,-192.529 102.5,-192.529\" stroke=\"black\"/>\n",
-       "</g>\n",
-       "<!-- 140558092108744 -->\n",
-       "<g class=\"node\" id=\"node3\"><title>140558092108744</title>\n",
-       "<polygon fill=\"none\" points=\"47,-73.5 47,-109.5 151,-109.5 151,-73.5 47,-73.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-87.8\">lstm_4 (LSTM)</text>\n",
-       "</g>\n",
-       "<!-- 140558092108016&#45;&gt;140558092108744 -->\n",
-       "<g class=\"edge\" id=\"edge2\"><title>140558092108016-&gt;140558092108744</title>\n",
-       "<path d=\"M99,-146.313C99,-138.289 99,-128.547 99,-119.569\" fill=\"none\" stroke=\"black\"/>\n",
-       "<polygon fill=\"black\" points=\"102.5,-119.529 99,-109.529 95.5001,-119.529 102.5,-119.529\" stroke=\"black\"/>\n",
-       "</g>\n",
-       "<!-- 140558092175736 -->\n",
-       "<g class=\"node\" id=\"node4\"><title>140558092175736</title>\n",
-       "<polygon fill=\"none\" points=\"45.5,-0.5 45.5,-36.5 152.5,-36.5 152.5,-0.5 45.5,-0.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-14.8\">dense_3 (Dense)</text>\n",
-       "</g>\n",
-       "<!-- 140558092108744&#45;&gt;140558092175736 -->\n",
-       "<g class=\"edge\" id=\"edge3\"><title>140558092108744-&gt;140558092175736</title>\n",
-       "<path d=\"M99,-73.3129C99,-65.2895 99,-55.5475 99,-46.5691\" fill=\"none\" stroke=\"black\"/>\n",
-       "<polygon fill=\"black\" points=\"102.5,-46.5288 99,-36.5288 95.5001,-46.5289 102.5,-46.5288\" stroke=\"black\"/>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SVG(model_to_dot(model).create(prog='dot', format='svg'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +190,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_X = pd.read_csv('./data/' + filename + '.' + str(IN_SEQ_LENGTH) + '_in_' + str(OUT_SEQ_LENGTH) + '_out.train_X.csv')\n",
+    "train_Y = pd.read_csv('./data/' + filename + '.' + str(IN_SEQ_LENGTH) + '_in_' + str(OUT_SEQ_LENGTH) + '_out.train_Y.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Trancate dataset\n",
+    "N_SAMPLES = min(N_SAMPLES, train_X.shape[0])\n",
+    "\n",
+    "train_X = train_X.loc[:N_SAMPLES,:]\n",
+    "train_Y = train_Y.loc[:N_SAMPLES,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -271,9 +232,6 @@
     }
    ],
    "source": [
-    "train_X = pd.read_csv('./data/' + filename + '.' + str(IN_SEQ_LENGTH) + '_in_' + str(OUT_SEQ_LENGTH) + '_out.train_X.csv')\n",
-    "train_Y = pd.read_csv('./data/' + filename + '.' + str(IN_SEQ_LENGTH) + '_in_' + str(OUT_SEQ_LENGTH) + '_out.train_Y.csv')\n",
-    "    \n",
     "print('Train set X, Y:')\n",
     "print( train_X.shape, train_Y.shape )"
    ]
@@ -287,7 +245,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def batch_generator(X, y, batch_size):\n",
+    "    number_of_batches = np.ceil(X.shape[0]/batch_size)\n",
+    "    counter = 0\n",
+    "    sample_index = np.arange(X.shape[0])\n",
+    "    while True:\n",
+    "        batch_index = sample_index[batch_size*counter:batch_size*(counter+1)]\n",
+    "        X_batch = X[batch_index,:]\n",
+    "        y_batch = y[batch_index]\n",
+    "        counter += 1\n",
+    "        yield (X_batch, y_batch)\n",
+    "        if (counter == number_of_batches):\n",
+    "            counter = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -296,55 +276,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "Epoch 00000: acc improved from -inf to 0.00000, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights.hdf5\n",
-      "39/39 [==============================] - 0s - loss: 2.6398 - acc: 0.0000e+00\n",
-      "Epoch 2/10\n",
-      "Epoch 00001: acc improved from 0.00000 to 0.87179, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights.hdf5\n",
-      "39/39 [==============================] - 0s - loss: 2.6163 - acc: 0.8718\n",
-      "Epoch 3/10\n",
-      "Epoch 00002: acc improved from 0.87179 to 1.00000, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights.hdf5\n",
-      "39/39 [==============================] - 0s - loss: 2.5921 - acc: 1.0000\n",
-      "Epoch 4/10\n",
-      "Epoch 00003: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.5661 - acc: 0.9231\n",
-      "Epoch 5/10\n",
-      "Epoch 00004: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.5370 - acc: 0.8462\n",
-      "Epoch 6/10\n",
-      "Epoch 00005: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.5039 - acc: 0.8462\n",
-      "Epoch 7/10\n",
-      "Epoch 00006: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.4653 - acc: 0.8462\n",
-      "Epoch 8/10\n",
-      "Epoch 00007: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.4201 - acc: 0.8462\n",
-      "Epoch 9/10\n",
-      "Epoch 00008: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.3668 - acc: 0.8462\n",
-      "Epoch 10/10\n",
-      "Epoch 00009: acc did not improve\n",
-      "39/39 [==============================] - 0s - loss: 2.3041 - acc: 0.8462\n"
+      "Epoch 1/4\n",
+      "Epoch 00000: loss improved from inf to 2.63966, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights-epoch-00-loss-2.64-acc-0.08.hdf5\n",
+      "39/39 [==============================] - 0s - loss: 2.6397 - acc: 0.0769\n",
+      "Epoch 2/4\n",
+      "Epoch 00001: loss improved from 2.63966 to 2.61565, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights-epoch-01-loss-2.62-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 0s - loss: 2.6156 - acc: 0.9231\n",
+      "Epoch 3/4\n",
+      "Epoch 00002: loss improved from 2.61565 to 2.59095, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights-epoch-02-loss-2.59-acc-1.00.hdf5\n",
+      "39/39 [==============================] - 0s - loss: 2.5909 - acc: 1.0000\n",
+      "Epoch 4/4\n",
+      "Epoch 00003: loss improved from 2.59095 to 2.56434, saving model to ./data/test.txt.nn_3_in_1_lstm_1_out.weights-epoch-03-loss-2.56-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 0s - loss: 2.5643 - acc: 0.9231\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fd639f67a90>"
+       "<keras.callbacks.History at 0x7f54db38b978>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checkname = './data/' + filename + '.' + MODEL_NAME + '.weights.hdf5'\n",
+    "#checkname = './data/' + filename + '.' + MODEL_NAME + '.weights.hdf5'\n",
+    "checkname  = './data/' + filename + '.' + MODEL_NAME + '.weights-epoch-{epoch:02d}-loss-{loss:.2f}-acc-{acc:.2f}.hdf5'\n",
+    "checkpoint = ModelCheckpoint(checkname, monitor='loss', verbose=1, save_best_only=True, mode='min')\n",
     "\n",
-    "checkpoint = ModelCheckpoint(checkname, monitor='acc', verbose=1, save_best_only=True, mode='max')\n",
+    "model.fit_generator(generator = batch_generator(train_X.as_matrix(), train_Y.as_matrix(), N_BATCH),\n",
+    "                    nb_epoch = N_EPOCH,\n",
+    "                    samples_per_epoch = train_X.shape[0],\n",
+    "                    callbacks=[checkpoint],\n",
+    "                    verbose = 1)\n",
     "\n",
-    "model.fit(train_X.as_matrix(), train_Y.as_matrix(), batch_size=1000, nb_epoch=10, callbacks=[checkpoint])"
+    "#model.fit(train_X.as_matrix(), train_Y.as_matrix(), batch_size=500, nb_epoch=N_EPOCH, callbacks=[checkpoint])"
    ]
   },
   {
@@ -356,6 +324,15 @@
     "#scores = model.evaluate(train_X, train_Y, verbose=0)\n",
     "#print(\"Model Accuracy: %.2f%%\" % (scores[1]*100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
