--- a/nlp_models/train_nn_3_in_2_lstm_1_out.ipynb
+++ b/nlp_models/train_nn_3_in_2_lstm_1_out.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
     "from IPython.display import SVG\n",
     "from keras.utils.visualize_util import plot,model_to_dot\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -49,12 +49,13 @@
     "MODEL_NAME = 'nn_3_in_2_lstm_1_out'\n",
     "\n",
     "N_SAMPLES = 1000000\n",
-    "N_EPOCH = 4"
+    "N_EPOCH = 10\n",
+    "N_BATCH = 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -110,14 +111,14 @@
     "model = Sequential()\n",
     "model.add( Embedding(input_dim=vocab_size, output_dim=EMBEDDING_DIM, input_length=IN_SEQ_LENGTH) )\n",
     "model.add( LSTM(HIDDEN_LAYER_1, return_sequences=True) )\n",
-    "model.add( LSTM(HIDDEN_LAYER_1, return_sequences=False) )\n",
+    "model.add( LSTM(HIDDEN_LAYER_2, return_sequences=False) )\n",
     "\n",
     "model.add( Dense(output_dim=vocab_size, activation='softmax') )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -140,13 +141,13 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "embedding_3 (Embedding)          (None, 3, 64)         896         embedding_input_3[0][0]          \n",
+      "embedding_2 (Embedding)          (None, 3, 64)         896         embedding_input_2[0][0]          \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_5 (LSTM)                    (None, 3, 1024)       4460544     embedding_3[0][0]                \n",
+      "lstm_3 (LSTM)                    (None, 3, 1024)       4460544     embedding_2[0][0]                \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_6 (LSTM)                    (None, 1024)          8392704     lstm_5[0][0]                     \n",
+      "lstm_4 (LSTM)                    (None, 1024)          8392704     lstm_3[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 14)            14350       lstm_6[0][0]                     \n",
+      "dense_2 (Dense)                  (None, 14)            14350       lstm_4[0][0]                     \n",
       "====================================================================================================\n",
       "Total params: 12868494\n",
       "____________________________________________________________________________________________________\n"
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -171,48 +172,48 @@
        "<g class=\"graph\" id=\"graph0\" transform=\"scale(1 1) rotate(0) translate(4 333)\">\n",
        "<title>G</title>\n",
        "<polygon fill=\"white\" points=\"-4,4 -4,-333 202,-333 202,4 -4,4\" stroke=\"none\"/>\n",
-       "<!-- 140712767570832 -->\n",
-       "<g class=\"node\" id=\"node1\"><title>140712767570832</title>\n",
+       "<!-- 140204122637816 -->\n",
+       "<g class=\"node\" id=\"node1\"><title>140204122637816</title>\n",
        "<polygon fill=\"none\" points=\"0,-292.5 0,-328.5 198,-328.5 198,-292.5 0,-292.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-306.8\">embedding_input_3 (InputLayer)</text>\n",
+       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-306.8\">embedding_input_2 (InputLayer)</text>\n",
        "</g>\n",
-       "<!-- 140712767570496 -->\n",
-       "<g class=\"node\" id=\"node2\"><title>140712767570496</title>\n",
+       "<!-- 140204122638656 -->\n",
+       "<g class=\"node\" id=\"node2\"><title>140204122638656</title>\n",
        "<polygon fill=\"none\" points=\"15.5,-219.5 15.5,-255.5 182.5,-255.5 182.5,-219.5 15.5,-219.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-233.8\">embedding_3 (Embedding)</text>\n",
+       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-233.8\">embedding_2 (Embedding)</text>\n",
        "</g>\n",
-       "<!-- 140712767570832&#45;&gt;140712767570496 -->\n",
-       "<g class=\"edge\" id=\"edge1\"><title>140712767570832-&gt;140712767570496</title>\n",
+       "<!-- 140204122637816&#45;&gt;140204122638656 -->\n",
+       "<g class=\"edge\" id=\"edge1\"><title>140204122637816-&gt;140204122638656</title>\n",
        "<path d=\"M99,-292.313C99,-284.289 99,-274.547 99,-265.569\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"102.5,-265.529 99,-255.529 95.5001,-265.529 102.5,-265.529\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140712767571784 -->\n",
-       "<g class=\"node\" id=\"node3\"><title>140712767571784</title>\n",
+       "<!-- 140203723877456 -->\n",
+       "<g class=\"node\" id=\"node3\"><title>140203723877456</title>\n",
        "<polygon fill=\"none\" points=\"47,-146.5 47,-182.5 151,-182.5 151,-146.5 47,-146.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-160.8\">lstm_5 (LSTM)</text>\n",
+       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-160.8\">lstm_3 (LSTM)</text>\n",
        "</g>\n",
-       "<!-- 140712767570496&#45;&gt;140712767571784 -->\n",
-       "<g class=\"edge\" id=\"edge2\"><title>140712767570496-&gt;140712767571784</title>\n",
+       "<!-- 140204122638656&#45;&gt;140203723877456 -->\n",
+       "<g class=\"edge\" id=\"edge2\"><title>140204122638656-&gt;140203723877456</title>\n",
        "<path d=\"M99,-219.313C99,-211.289 99,-201.547 99,-192.569\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"102.5,-192.529 99,-182.529 95.5001,-192.529 102.5,-192.529\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140712767630192 -->\n",
-       "<g class=\"node\" id=\"node4\"><title>140712767630192</title>\n",
+       "<!-- 140203724190720 -->\n",
+       "<g class=\"node\" id=\"node4\"><title>140203724190720</title>\n",
        "<polygon fill=\"none\" points=\"47,-73.5 47,-109.5 151,-109.5 151,-73.5 47,-73.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-87.8\">lstm_6 (LSTM)</text>\n",
+       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-87.8\">lstm_4 (LSTM)</text>\n",
        "</g>\n",
-       "<!-- 140712767571784&#45;&gt;140712767630192 -->\n",
-       "<g class=\"edge\" id=\"edge3\"><title>140712767571784-&gt;140712767630192</title>\n",
+       "<!-- 140203723877456&#45;&gt;140203724190720 -->\n",
+       "<g class=\"edge\" id=\"edge3\"><title>140203723877456-&gt;140203724190720</title>\n",
        "<path d=\"M99,-146.313C99,-138.289 99,-128.547 99,-119.569\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"102.5,-119.529 99,-109.529 95.5001,-119.529 102.5,-119.529\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140712766895832 -->\n",
-       "<g class=\"node\" id=\"node5\"><title>140712766895832</title>\n",
+       "<!-- 140203722737704 -->\n",
+       "<g class=\"node\" id=\"node5\"><title>140203722737704</title>\n",
        "<polygon fill=\"none\" points=\"45.5,-0.5 45.5,-36.5 152.5,-36.5 152.5,-0.5 45.5,-0.5\" stroke=\"black\"/>\n",
-       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-14.8\">dense_3 (Dense)</text>\n",
+       "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"99\" y=\"-14.8\">dense_2 (Dense)</text>\n",
        "</g>\n",
-       "<!-- 140712767630192&#45;&gt;140712766895832 -->\n",
-       "<g class=\"edge\" id=\"edge4\"><title>140712767630192-&gt;140712766895832</title>\n",
+       "<!-- 140203724190720&#45;&gt;140203722737704 -->\n",
+       "<g class=\"edge\" id=\"edge4\"><title>140203724190720-&gt;140203722737704</title>\n",
        "<path d=\"M99,-73.3129C99,-65.2895 99,-55.5475 99,-46.5691\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"102.5,-46.5288 99,-36.5288 95.5001,-46.5289 102.5,-46.5288\" stroke=\"black\"/>\n",
        "</g>\n",
@@ -223,7 +224,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -328,7 +329,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def batch_generator(X, y, batch_size):\n",
+    "    number_of_batches = np.ceil(X.shape[0]/batch_size)\n",
+    "    counter = 0\n",
+    "    sample_index = np.arange(X.shape[0])\n",
+    "    while True:\n",
+    "        batch_index = sample_index[batch_size*counter:batch_size*(counter+1)]\n",
+    "        X_batch = X[batch_index,:]\n",
+    "        y_batch = y[batch_index]\n",
+    "        counter += 1\n",
+    "        yield (X_batch, y_batch)\n",
+    "        if (counter == number_of_batches):\n",
+    "            counter = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -337,37 +360,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/4\n",
-      "Epoch 00000: acc improved from -inf to 0.07692, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights.hdf5\n",
-      "39/39 [==============================] - 1s - loss: 2.6393 - acc: 0.0769\n",
-      "Epoch 2/4\n",
-      "Epoch 00001: acc improved from 0.07692 to 0.84615, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights.hdf5\n",
-      "39/39 [==============================] - 1s - loss: 2.6097 - acc: 0.8462\n",
-      "Epoch 3/4\n",
-      "Epoch 00002: acc did not improve\n",
-      "39/39 [==============================] - 1s - loss: 2.5757 - acc: 0.7692\n",
-      "Epoch 4/4\n",
-      "Epoch 00003: acc did not improve\n",
-      "39/39 [==============================] - 1s - loss: 2.5310 - acc: 0.7692\n"
+      "Epoch 1/10\n",
+      "Epoch 00000: loss improved from inf to 1.64216, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-00-loss-1.64-acc-0.62.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 1.6422 - acc: 0.6154\n",
+      "Epoch 2/10\n",
+      "Epoch 00001: loss improved from 1.64216 to 1.44282, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-01-loss-1.44-acc-0.85.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 1.4428 - acc: 0.8462\n",
+      "Epoch 3/10\n",
+      "Epoch 00002: loss improved from 1.44282 to 1.23429, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-02-loss-1.23-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 1.2343 - acc: 0.9231\n",
+      "Epoch 4/10\n",
+      "Epoch 00003: loss improved from 1.23429 to 1.04177, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-03-loss-1.04-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 1.0418 - acc: 0.9231\n",
+      "Epoch 5/10\n",
+      "Epoch 00004: loss improved from 1.04177 to 0.87917, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-04-loss-0.88-acc-1.00.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 0.8792 - acc: 1.0000\n",
+      "Epoch 6/10\n",
+      "Epoch 00005: loss improved from 0.87917 to 0.73633, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-05-loss-0.74-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 0.7363 - acc: 0.9231\n",
+      "Epoch 7/10\n",
+      "Epoch 00006: loss improved from 0.73633 to 0.60220, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-06-loss-0.60-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 0.6022 - acc: 0.9231\n",
+      "Epoch 8/10\n",
+      "Epoch 00007: loss improved from 0.60220 to 0.48158, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-07-loss-0.48-acc-0.92.hdf5\n",
+      "39/39 [==============================] - 2s - loss: 0.4816 - acc: 0.9231\n",
+      "Epoch 9/10\n",
+      "Epoch 00008: loss improved from 0.48158 to 0.37650, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-08-loss-0.38-acc-1.00.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 0.3765 - acc: 1.0000\n",
+      "Epoch 10/10\n",
+      "Epoch 00009: loss improved from 0.37650 to 0.29391, saving model to ./data/test.txt.nn_3_in_2_lstm_1_out.weights-epoch-09-loss-0.29-acc-1.00.hdf5\n",
+      "39/39 [==============================] - 1s - loss: 0.2939 - acc: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7ffa3c576240>"
+       "<keras.callbacks.History at 0x7f83b7845828>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "checkname = './data/' + filename + '.' + MODEL_NAME + '.weights.hdf5'\n",
+    "checkname  = './data/' + filename + '.' + MODEL_NAME + '.weights-epoch-{epoch:02d}-loss-{loss:.2f}-acc-{acc:.2f}.hdf5'\n",
     "\n",
-    "checkpoint = ModelCheckpoint(checkname, monitor='acc', verbose=1, save_best_only=True, mode='max')\n",
+    "callbacks = [\n",
+    "    ModelCheckpoint(checkname, monitor='loss', verbose=1, save_best_only=True, mode='min'),\n",
+    "    EarlyStopping(monitor='loss', verbose=1, patience=0)\n",
+    "]\n",
     "\n",
-    "model.fit(train_X.as_matrix(), train_Y.as_matrix(), batch_size=N_SAMPLES, nb_epoch=N_EPOCH, callbacks=[checkpoint])"
+    "model.fit_generator(generator = batch_generator(train_X.as_matrix(), train_Y.as_matrix(), N_BATCH),\n",
+    "                    nb_epoch = N_EPOCH,\n",
+    "                    samples_per_epoch = train_X.shape[0],\n",
+    "                    callbacks=callbacks,\n",
+    "                    verbose = 1)\n",
+    "\n",
+    "#model.fit(train_X.as_matrix(), train_Y.as_matrix(), batch_size=N_SAMPLES, nb_epoch=N_EPOCH, callbacks=callbacks)"
    ]
   },
   {
